log/build_2024-07-10_16-17-23/my_robot_controller/stderr.log
  File "/home/ros2/ros2_ws/install/my_robot_controller/lib/python3.10/site-packages/my_robot_controller/distance.py", line 72
    break
    ^^^^^
SyntaxError: 'break' outside loop

